# PR_Time_Series_Toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yaml
docs/source/: conf.py  toolkit.rst
docs/source/modules/: anomaly_detection.rst  data_preprocessing.rst
exp_notebooks/: 10_similarity_checking.ipynb  1_explore_data.ipynb  2_data_preprocessing.ipynb  3_gap_filling.ipynb  4_ar_models.ipynb  4_arima_model.ipynb  5_prophet_model.ipynb  6_transformer_forecasting.ipynb  7_inceptiontime_forecasting.ipynb  8_large_gap_filling.ipynb  9_anomaly_detection.ipynb
src/tstoolkit/: __init__.py  anomaly_detection.py  data_preprocess.py  forecasting_models.py  gap_filling.py  similarity.py  utils.py
tests/: __init__.py  test_anomaly_detection.py  test_data.py  test_data_preprocess.py  test_forecasting_models.py  test_gap_filling.py  test_similarity.py
tutorials/: Anomaly_detection.ipynb  Forecasting.ipynb  Gap_Filling.ipynb  Similarity_checker.ipynb
tutorials/artifacts/: standardize_pipe.pkl
tutorials/run/InceptionTimePlus/0fdfd119-dc66-48bd-bd7f-1c26c28d2f4a/: InceptionTimePlus.pt
tutorials/run/InceptionTimePlus/87a667a3-4330-4c9b-b3f4-939fa8c11266/: InceptionTimePlus.pt
